src/dnm-croppr/src/css/croppr.css
.croppr-container * {
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

.croppr-container img {
  vertical-align: middle;
  max-width: 100%;
}

.croppr {
  position: relative;
  display: inline-block;
}

.croppr-overlay {
  background: rgba(0,0,0,0.5);
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  cursor: crosshair;
}

.croppr-region {
  position: absolute;
  z-index: 3;
  cursor: move;
  top: 0;
}

.croppr-imageClipped {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  pointer-events: none;
  background-color: white;
  opacity: 0.5 !important;
}

.croppr-handle {
  border: 1px solid black;
  border-radius: 5px;
  background-color: white;
  width: 10px;
  height: 10px;
  position: absolute;
  z-index: 4;
  top: 0;
}

.croppr-dark .croppr-image {
  background-color: white;
}

.croppr-light .croppr-image, .croppr-light .croppr-imageClipped {
  background-color: black;
}

